# Battleship-MP-Server

./: .gitignore  CMakeLists.txt  README.md  boardSetup  boardSetup.cpp  boardSetup.h  client.cpp  client_network.cpp  client_ui.cpp  game_common.cpp  game_common.h  server.cpp  serverlinux  serverlinux.cpp
Client/: client.cpp  game_common.cpp  game_common.h  game_manager.cpp  game_manager.h  network.cpp  network.h  ui.cpp  ui.h
Server/: client_handler.cpp  client_handler.h  game_common.cpp  game_common.h  matchmaking.cpp  matchmaking.h  protocols.cpp  protocols.h  server.cpp  server_state.cpp  server_state.h  serverlinux  serverlinux.cpp
boardSetup.dSYM/Contents/: Info.plist
boardSetup.dSYM/Contents/Resources/DWARF/: boardSetup
boardSetup.dSYM/Contents/Resources/Relocations/aarch64/: boardSetup.yml
